--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ $34,700,240
                         
 $34,700,240 
                     </textarea>
-                    <a href="2211B000009_ActaFallo_AdjDir_UPIIP.pdf">2211B000009_ActaFallo_AdjDir</a> 
+                    <a href="2211B000009_ActaFallo_AdjDir_UPIIP.pdf" target="_blank">2211B000009_ActaFallo_AdjDir</a> 
                 </div>
               
 
