--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 </head>
 <body>
     <div class="imagenes">
-  <img src="IzquierdaEncabezado.jpg" alt="IPN" title="Izq">
-  <img src="CentroEncabezado.png" alt="IPN" title="Cent">
-  <img src="DerechaEncabezado.jpg" alt="IPN" title="Izq">
+  <img src="IzquierdaEncabezado.jpg" alt="IPN" title="SECRETARIA DE EDUCACIÓN PÚBLICA">
+  <img src="CentroEncabezado.png" alt="IPN" title="INSTITUTO POLITECNICO NACIONAL">
+  <img src="DerechaEncabezado.jpg" alt="IPN" title="COORDINACIÓN GENERAL DE PLANEACIÓN E INFORMACIÓN INSTITUCIONAL">
 </div>
 <form id="miFormulario">
     
-   <h1>PROGRAMA DE DIGNIFICACIÓN DE EQUIPAMIENTO INSTITUCIONAL 2026 (PDEI 2026) VF-1.05</h1>
+   <h1>PROGRAMA DE DIGNIFICACIÓN DE EQUIPAMIENTO INSTITUCIONAL 2026 (PDEI 2026) VF-1.06</h1>
 <div class="datos">
    <fieldset>
     <legend>Información General </legend>
@@ -81,12 +81,12 @@
 
     <div class="form_input">
       <label for="telefonoTitular">Teléfono Titular</label>
-      <input id="telefonoTitular" name="telefonoTitular" placeholder="telefono del Titular " required>
+      <input id="telefonoTitular" name="telefonoTitular" placeholder="telefono del Titular " type="tel" required>
     </div>
 
     <div class="form_input">
       <label for="correoTitular">Correo Titular</label>
-      <input id="correoTitular" name="correoTitular" placeholder="correo del Titular " required>
+      <input id="correoTitular" name="correoTitular" placeholder="correo del Titular " type="email" required>
     </div>
     
     <div class="form_input">
@@ -97,12 +97,12 @@
 
     <div class="form_input">
       <label for="telefonoResponsable">Teléfono Responsable</label>
-      <input id="telefonoResponsable" name="telefonoResponsable" placeholder="telefono del Responsable " required>
+      <input id="telefonoResponsable" name="telefonoResponsable" placeholder="telefono del Responsable " type="tel" required>
     </div>
 
     <div class="form_input">
       <label for="correoResponsable">Correo Responsable</label>
-      <input id="correoResponsable" name="correoResponsable" placeholder="correo del Responsable " required>
+      <input id="correoResponsable" name="correoResponsable" placeholder="correo del Responsable " type="email" required>
     </div>
   
 </fieldset>
@@ -179,6 +179,7 @@
 
 
 </html>
+
 
 
 
