--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
     
     <div class="form_input">
-      <label for="responsable">Responsable de llenado (Capítulo 5000)</label>
+      <label for="responsable">Nombre del Responsable (Capítulo 5000)</label>
       <input id="responsable" name="responsable" placeholder="responsable " required>
     </div>
 
@@ -216,6 +216,7 @@
 
 
 </html>
+
 
 
 
