--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </div>
 <form id="miFormulario">
     
-   <h1>PROGRAMA DE DIGNIFICACIÓN DE EQUIPAMIENTO INSTITUCIONAL 2026 (PDEI 2026)</h1>
+   <h1>PROGRAMA INSTITUCIONAL DE DETECCIÓN DE NECESIDADES DE EQUIPAMIENTO (PIDNE) 2026</h1>
 <h2>Intrucciones</h2>
    <p>
       <ul>
@@ -45,7 +45,7 @@
     <legend>Información General </legend>
     
     <div class="form_input">
-      <label for="secretaria">Secretaría</label>
+      <label for="secretaria">Secretaría o Direccion General</label>
       <select id="secretaria" name="secretaria" placeholder="   " required>
                    <option value="">-- Selecciona un nivel--</option>
                    <option value="SG">Secretaría General</option>
@@ -208,6 +208,7 @@
 
 
 </html>
+
 
 
 
