--- a/index.html
+++ b/index.html
@@ -24,16 +24,12 @@
 <h2>Intrucciones</h2>
    <p>
       <ul>
-              <li>Este formulario está diseñado para capturar la solicitud una sola vez. Después de su envío, no podrá ser modificada, corregida ni registrada nuevamente.</li> 
-              <li>Todos los campos correspondientes a la sección de Información General y a la Información de Contacto, deben completarse obligatoriamente.</li>
-              <li >En la tabla existen dos formas de agregar filas para capturar más equipos:
-                  <ol class="numeracion">
-                      <li>Al finalizar la captura de la última fila existente.</li>
-                      <li>Mediante el botón “Agregar fila”.</li>
-                  </ol> 
-              </li>
-              <li>En la tabla de captura de equipos, al registrar el nombre de un equipo, todos los demás campos de este renglón se vuelven obligatorios. Si alguno queda sin completar, el formulario no podrá enviarse.</li>	
-              <li>En el campo <strong>“ Precio unitario de referencia ”</strong> se deberá registrar un monto estimado, el cual podrá obtenerse mediante <strong>consulta en línea en sitios web de proveedores especializados, catálogos electrónicos empresariales o fuentes públicas confiables</strong> vinculadas directamente con el equipo solicitado, sin que sea obligatorio contar con una cotización formal. </li>
+          <li>El formulario de solicitud está diseñado para capturar una sola vez. Después de su envío, no podrá ser modificado.</li>
+          <li>Todos los campos correspondientes a la sección de Información General y a la Información de Contacto, deben completarse obligatoriamente.</li>
+          <li>En la <strong>Tabla de Registro de Necesidades</strong>strong>, las filas de llenado se generarán automáticamente al concluir la última fila existente.</li>
+          <li>Al registrar cada equipo, en la <strong>Tabla de Registro de Necesidades</strong>strong>, deberán llenarse todos los campos de cada renglón. Si alguno queda sin completar, el formulario no podrá enviarse.</li>
+          <li>En el campo <strong>“Precio unitario de referencia”</strong>strong> se deberá registrar un monto estimado, de fuentes confiables. No es obligatorio contar con una cotización formal.</li>
+
       </ul>    
      
    </p>
@@ -208,6 +204,7 @@
 
 
 </html>
+
 
 
 
