--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
       <ul>
           <li>El formulario de solicitud está diseñado para capturar una sola vez. Después de su envío, no podrá ser modificado.</li>
           <li>Todos los campos correspondientes a la sección de Información General y a la Información de Contacto, deben completarse obligatoriamente.</li>
-          <li>En la <strong>Tabla de Registro de Necesidades</strong>strong>, las filas de llenado se generarán automáticamente al concluir la última fila existente.</li>
-          <li>Al registrar cada equipo, en la <strong>Tabla de Registro de Necesidades</strong>strong>, deberán llenarse todos los campos de cada renglón. Si alguno queda sin completar, el formulario no podrá enviarse.</li>
-          <li>En el campo <strong>“Precio unitario de referencia”</strong>strong> se deberá registrar un monto estimado, de fuentes confiables. No es obligatorio contar con una cotización formal.</li>
+          <li>En la <strong>Tabla de Registro de Necesidades</strong>, las filas de llenado se generarán automáticamente al concluir la última fila existente.</li>
+          <li>Al registrar cada equipo, en la <strong>Tabla de Registro de Necesidades</strong>, deberán llenarse todos los campos de cada renglón. Si alguno queda sin completar, el formulario no podrá enviarse.</li>
+          <li>En el campo <strong>“Precio unitario de referencia”</strong> se deberá registrar un monto estimado, de fuentes confiables. No es obligatorio contar con una cotización formal.</li>
 
       </ul>    
      
@@ -201,6 +201,7 @@
 
 
 </html>
+
 
 
 
