--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
                                         Marca /Modelo
                                     </th>
 
-                                    <th title="Especificaciones Técnicas">
-                                        Especificaciones Técnicas
+                                    <th title=" Características Técnicas del Equipo">
+                                         Características Técnicas del Equipo
                                     </th> 
                                     
                                     <th title="Justificación (Equipo no Existente, Sustitución o Complemento)">
@@ -201,6 +201,7 @@
 
 
 </html>
+
 
 
 
