--- a/index.html
+++ b/index.html
@@ -21,7 +21,12 @@
 <form id="miFormulario">
     
    <h1>PROGRAMA INSTITUCIONAL DE DETECCIÓN DE NECESIDADES DE EQUIPAMIENTO (PIDNE) 2026</h1>
-<h2>Intrucciones</h2>
+   <h2>OBJETIVO</h2>
+<p>Con el propósito de iniciar la conformación de Proyectos de Inversión correspondientes al Capítulo 5000, se presenta la Tabla de Registro de Necesidades. Este instrumento permitirá identificar, justificar y documentar de manera ordenada los requerimientos institucionales relacionados con la adquisición de equipamiento.</p>
+    <h2>DEFINICION DE CAPÍTULO 5000</h2>
+<p>El Capítulo 5000 del Clasificador Único de Contrataciones Públicas (CUCoP) corresponde a Bienes Muebles, Inmuebles e Intangibles, y se destina a la adquisición de mobiliario, equipo, vehículos, maquinaria, bienes científicos y demás activos indispensables para el adecuado funcionamiento y fortalecimiento de las dependencias públicas</p>
+   
+   <h2>Intrucciones</h2>
    <p>
       <ul>
           <li>El formulario de solicitud está diseñado para capturar una sola vez. Después de su envío, no podrá ser modificado.</li>
@@ -201,6 +206,7 @@
 
 
 </html>
+
 
 
 
