--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
 </table>
 <fieldset class="TablaFS"> 
-  <legend>Tabla de Registro de Necesidades</legend> 
+  <legend class="TablaLeg" >Tabla de Registro de Necesidades</legend> 
 <table class="tabla_style" title="Tabla de Registro de Necesidades">
 <thead>
                                <tr>
@@ -206,6 +206,7 @@
 
 
 </html>
+
 
 
 
