--- a/index.html
+++ b/index.html
@@ -97,13 +97,13 @@
     </div>
 
     <div class="form_input">
-      <label for="telefonoTitular">Extensión del Titular</label>
-      <input id="telefonoTitular" name="telefonoTitular" placeholder="Extensión del Titular " type="tel" required>
+      <label for="telefonoTitular">Extensión</label>
+      <input id="telefonoTitular" name="telefonoTitular" placeholder="Extensión" type="tel" required>
     </div>
 
     <div class="form_input">
       <label for="correoTitular">Correo del Titular</label>
-      <input id="correoTitular" name="correoTitular" placeholder="correo del Titular " type="email" required>
+      <input id="correoTitular" name="correoTitular" placeholder="correo " type="email" required>
     </div>
     
     
@@ -123,13 +123,13 @@
 
 
     <div class="form_input">
-      <label for="telefonoResponsable">Extensión del Responsable</label>
-      <input id="telefonoResponsable" name="telefonoResponsable" placeholder="Extensión del Responsable " type="tel" required>
+      <label for="telefonoResponsable">Extensión</label>
+      <input id="telefonoResponsable" name="telefonoResponsable" placeholder="Extensión " type="tel" required>
     </div>
 
     <div class="form_input">
-      <label for="correoResponsable">Correo del Responsable</label>
-      <input id="correoResponsable" name="correoResponsable" placeholder="Correo del Responsable " type="email" required>
+      <label for="correoResponsable">Correo</label>
+      <input id="correoResponsable" name="correoResponsable" placeholder="Correo " type="email" required>
     </div>
   
 </fieldset>
@@ -206,6 +206,7 @@
 
 
 </html>
+
 
 
 
