--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </div>
 
     <div class="form_input">
-         <label for="direccion">Dirección</label>   
+         <label for="direccion">Dirección o Coordinación</label>   
              <select id="direccion" name="direccion" disabled required>
              <option value="">-- Selecciona un dirección--</option>
              </select>
@@ -206,6 +206,7 @@
 
 
 </html>
+
 
 
 
