--- a/index.html
+++ b/index.html
@@ -49,16 +49,20 @@
       <label for="secretaria">Secretaría o Direccion General</label>
       <select id="secretaria" name="secretaria" placeholder="   " required>
                    <option value="">-- Selecciona un nivel--</option>
-                   <option value="SG">Secretaría General</option>
-                   <option value="DG">Dirección General</option>
-                   <option value="AG">Oficina del Abogado General</option>
-                   <option value="PD">Presidencia del Decanato</option>
-                   <option value="SACAD">Secretaría Académica</option>
-                   <option value="SADMIN">Secretaría de Administración</option>
-                   <option value="SIIS">Secretaría de Innovación e Integración Social</option>
-                   <option value="SIP">Secretaría de Investigación y Posgrado</option>
-                   <option value="SSE">Secretaría de Servicios Educativos</option>
-                   </select>
+                  <option value="CII">Coordinación de Imagen Institucional</option>
+                  <option value="CGPII">Coordinación General de Planeación e Información Institucional</option>
+                  <option value="DG">Dirección General</option>             
+                  <option value="AG">Oficina del Abogado General</option>
+                  <option value="PD">Presidencia del Decanato</option>   
+                  <option value="SACAD">Secretaría Académica</option>   
+                  <option value="SADMIN">Secretaría de Administración</option>        
+                  <option value="CENAC">Centro Nacional de Cálculo (CENAC)</option>          
+                  <option value="SIIS">Secretaría de Innovación e Integración Social</option>     
+                  <option value="SIP">Secretaría de Investigación y Posgrado</option>      
+                  <option value="SSE">Secretaría de Servicios Educativos</option>       
+                  <option value="SG">Secretaría General</option>    
+                  <option value="ER">Estación de Radiodifusión XHIPN-FM 95.7 MHz</option>
+                  </select>
       
     </div>
 
@@ -206,6 +210,7 @@
 
 
 </html>
+
 
 
 
