--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
    <div class="bloque-info">
        <fieldset>
                    <legend>OBJETIVO</legend>
-                   <p>Con el propósito de iniciar la conformación de Proyectos de Inversión correspondientes al Capítulo 5000, se presenta la Tabla de Registro de Necesidades. Este instrumento permitirá identificar, justificar y documentar de manera ordenada los requerimientos institucionales relacionados con la adquisición de equipamiento.</p>
+                   <p class="Just">Con el propósito de iniciar la conformación de Proyectos de Inversión correspondientes al Capítulo 5000, se presenta la Tabla de Registro de Necesidades. Este instrumento permitirá identificar, justificar y documentar de manera ordenada los requerimientos institucionales relacionados con la adquisición de equipamiento.</p>
        </fieldset>
           
        <fieldset>
                   <legend>DEFINICION DE CAPÍTULO 5000</legend>
-                  <p>El Capítulo 5000 del Clasificador Único de Contrataciones Públicas (CUCoP) corresponde a Bienes Muebles, Inmuebles e Intangibles, y se destina a la adquisición de mobiliario, equipo, vehículos, maquinaria, bienes científicos y demás activos indispensables para el adecuado funcionamiento y fortalecimiento de las dependencias públicas</p>
+                  <p class="Just">El Capítulo 5000 del Clasificador Único de Contrataciones Públicas (CUCoP) corresponde a Bienes Muebles, Inmuebles e Intangibles, y se destina a la adquisición de mobiliario, equipo, vehículos, maquinaria, bienes científicos y demás activos indispensables para el adecuado funcionamiento y fortalecimiento de las dependencias públicas</p>
        </fieldset>
       </div> 
    <h2>Intrucciones</h2>
@@ -222,6 +222,7 @@
 
 
 </html>
+
 
 
 
