--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           
        <fieldset>
                   <legend>DEFINICION DE CAPÍTULO 5000</legend>
-                  <p class="Just">El Capítulo 5000 del Clasificador Único de Contrataciones Públicas (CUCoP) corresponde a Bienes Muebles, Inmuebles e Intangibles, y se destina a la adquisición de mobiliario, equipo, vehículos, maquinaria, bienes científicos y demás activos indispensables para el adecuado funcionamiento y fortalecimiento de las dependencias públicas</p>
+                  <p class="Just C5000">El Capítulo 5000 del Clasificador Único de Contrataciones Públicas (CUCoP) corresponde a Bienes Muebles, Inmuebles e Intangibles, y se destina a la adquisición de mobiliario, equipo, vehículos, maquinaria, bienes científicos y demás activos indispensables para el adecuado funcionamiento y fortalecimiento de las dependencias públicas</p>
        </fieldset>
       </div> 
    <h2>Intrucciones</h2>
@@ -151,7 +151,7 @@
 
 </table>
  <div class="bloque-botones">
-<button type="button" id="nuevoRegistro">🆕 Nuevo registro</button>
+
 <button type="button" id="guardarBorrador">💾 Guardar borrador</button>
 <button type="button" id="cargarBorrador">📂 Continuar registro</button>
  </div>
@@ -222,6 +222,7 @@
 
 
 </html>
+
 
 
 
