--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 <!-- <div class="DatosNOT"> -->
    <div class="bloque-info">
        <fieldset>
-                   <legend>OBJETIVO</legend>
-                   <p class="Just OBJ">Con el propósito de iniciar la conformación de Proyectos de Inversión correspondientes al Capítulo 5000, se presenta la Tabla de Registro de Necesidades. Este instrumento permitirá identificar, justificar y documentar de manera ordenada los requerimientos institucionales relacionados con la adquisición de equipamiento.</p>
+                   <legend>OBJETIVO:</legend>
+                   <p class="Just OBJ">Recabar información que permita identificar y analizar las necesidades de equipamiento correspondientes al Capítulo 5000 “Bienes Muebles, Inmuebles e Intangibles” de las dependencias del Instituto Politécnico Nacional, con el propósito de apoyar la planeación, formulación y priorización de los proyectos de inversión institucional.</p>
        </fieldset>
           
        <fieldset>
@@ -229,6 +229,7 @@
 
 
 </html>
+
 
 
 
