--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
    <div class="bloque-info">
        <fieldset>
                    <legend>OBJETIVO:</legend>
-                   <p class="Just OBJ">Recabar información que permita identificar y analizar las necesidades de equipamiento correspondientes al Capítulo 5000 “Bienes Muebles, Inmuebles e Intangibles” de las dependencias del Instituto Politécnico Nacional, con el propósito de apoyar la planeación, formulación y priorización de los proyectos de inversión institucional.</p>
+                   <p class="Just OBJ">Recabar información, que permita identificar y analizar las necesidades de equipamiento correspondientes al Capítulo 5000 “Bienes Muebles, Inmuebles e Intangibles” de las dependencias del Instituto Politécnico Nacional, con el propósito de apoyar la planeación, formulación y priorización de los proyectos de inversión institucional.</p>
        </fieldset>
           
        <fieldset>
                   <legend>DEFINICIÓN DE CAPÍTULO 5000</legend>
-                  <p class="Just C5000">El Capítulo 5000 del Clasificador Único de Contrataciones Públicas (CUCoP) corresponde a Bienes Muebles, Inmuebles e Intangibles, y se destina a la adquisición de mobiliario, equipo, vehículos, maquinaria, bienes de laboratorio y demás activos indispensables para el adecuado funcionamiento y fortalecimiento de las dependencias públicas</p>
+                  <p class="Just C5000">El Capítulo 5000 del Clasificador Único de Contrataciones Públicas (CUCoP), corresponde a Bienes Muebles, Inmuebles e Intangibles, y se destina a la adquisición de mobiliario, equipo, vehículos, maquinaria, bienes de laboratorio y demás activos indispensables para el adecuado funcionamiento y fortalecimiento de las dependencias públicas</p>
        </fieldset>
       </div>
   <div class="bloque-inst">    
@@ -235,6 +235,7 @@
 
 
 </html>
+
 
 
 
